Improve FailoverETLServerDownTest
Follow some lints, i.e. using StandardCharsets.UTF_8
Setup test folders as constants
Shutdown configservice after usage
Use Instant rather than epoch for event generation